--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,10 @@
                 height: 100vh;
                 width: 100vw;
             }
+
+            .node.post {
+              background: red;
+            }
         </style>
     </head>
 
@@ -114,6 +118,7 @@
                     super('Post');
 
                     this.data.render = 'svelte';
+                    this.data.class = 'post'
                 }
 
                 async builder(node) {
